manifests/fake-ca/copy/httpandhttpsgw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.3.50
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.artdevldn.co.uk"
    allowedRoutes: 
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.artdevldn.co.uk"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: example-app-tls
    allowedRoutes: 
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-app-route-1
spec:
  parentRefs:
  - name: tls-gateway
  hostnames:
  - "artdevldn.co.uk"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: redpanda-console
      namespace: redpanda-ns
      port: 8080
